Closed Bug 826055 Opened 13 years ago Closed 13 years ago

mp3 link does absolutely nothing

Categories

(Firefox OS Graveyard :: Gaia::Browser, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-basecamp:-, firefox20 wontfix, firefox21 wontfix, firefox22 fixed, b2g18+ fixed, b2g18-v1.0.0 wontfix, b2g18-v1.0.1 wontfix)

RESOLVED FIXED
B2G C4 (2jan on)
blocking-basecamp -
Tracking Status
firefox20 --- wontfix
firefox21 --- wontfix
firefox22 --- fixed
b2g18 + fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- wontfix

People

(Reporter: jdm, Assigned: tzimmermann)

Details

Attachments

(2 files, 1 obsolete file)

STR: 1. visit http://ccmixter.org/files/texasradiofish/40632 in the browser 2. press the "Download" link, and play around with the window that pops up until you are able to press the link to the mp3 file (http://ccmixter.org/content/texasradiofish/texasradiofish_-_Waiting_for_You.mp3) 3. Notice that nothing happens. Open it in a new tab, and the page apparently loads and is blank. Expected: Some kind of download request, or sending it to the music app or something. Actual: Nothing. The same link on desktop opens up the download request dialog.
Triage: this is currently working as expected for V1 but should probably have a nicer message instead of loading a blank page. BB-, tracking-b2g18+
Status: NEW → UNCONFIRMED
blocking-basecamp: ? → -
tracking-b2g18: --- → +
Ever confirmed: false
Assignee: nobody → tzimmermann
OS: Linux → Gonk (Firefox OS)
Hardware: x86_64 → ARM
I triggered this bug a few days ago and was able to fix it. The problem is that Gecko doesn't check the OMX framework, which handles MP3 files on FirefoxOS. The attached patch fixes the problem and allows for streaming of MP3 files within the browser app. I noticed that there are other types that are not not handled as well (e.g., wave files). Is this intentionally or just missing?
Attachment #705377 - Flags: review?(benjamin)
Attachment #705377 - Flags: review?(benjamin) → review?(bzbarsky)
Comment on attachment 705377 [details] [diff] [review] Check OMX when looking for decoders on FirefoxOS r=me, though it's not clear to me why all this stuff is ifdefed. Seems like it would be better to keep the ifdefs inside DecoderTraits, no? Please file a followup bug on that.
Attachment #705377 - Flags: review?(bzbarsky) → review+
Added [r=bzbarsky]
Attachment #705377 - Attachment is obsolete: true
Attachment #705775 - Flags: review+
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
This bug is marked tracking+ for b2g18. However, the patch does not apply cleanly enough for uplift. Please post a branch-specific patch. Thanks!
Reopened for uplift.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
The patch for b2g18. No actual code changes have been made.
Attachment #722174 - Flags: review+
https://hg.mozilla.org/releases/mozilla-b2g18/rev/0f3decb05b30 Please don't reopen bugs for uplifts. The resolution is used to track landing on mozilla-central. We use the status flags to track uplifts and reopening the bug can cause it to be missed when we're looking for uplifts.
Status: REOPENED → RESOLVED
Closed: 13 years ago13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → B2G C4 (2jan on)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: