Bug 826055 - Check OMX when looking for decoders on FirefoxOS. r=bz, a=tracking+

On FirefoxOS, when trying to stream an MP3 file in the browser, Gecko
does not check the OMX decoder for support, and streaming fails.

This patch adds the check for OMX decoders. The browser now streams
the MP3 file correctly.